# betting-bot

./: .dockerignore  .gitignore  UI.py  config.ini  demo.py  dockerfile  main.py  pyproject.toml  requirements.txt  run_ui.py  test.py
.github/workflows/: publish.yml
UI/: Dashboard.py
UI/pages/: Config.py  Utils.py
src/: UI.py  actions.py  config.py  demo.py  info.py  login.py  tg.py  utils.py
src/analytics/: daily_report.py  graphs.py  summary.py
